# t0d0d0d0

./: .gitignore  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  receive.py  requirements.txt  ruff.toml  send.py  test.py
assets/: auth&secure.drawio  t0d0d0d0 scheme.drawio
deploy/: Dockerfile.bot  Dockerfile.frontend  Dockerfile.http  Dockerfile.notyfier  Dockerfile.sheduler
deploy/k8s/: app-secrets.yaml  bot-deployment.yaml  certbot-data-pvc.yaml  certbot-www-pvc.yaml  frontend-deployment.yaml  http-deployment.yaml  http-service.yaml  nginx-deployment.yaml  nginx-service.yaml  notyfier-deployment.yaml  sheduler-deployment.yaml
deploy/nginx/: Dockerfile  init-letsencrypt.sh  nginx.conf
scripts/migrations/: env.py
t0d0d0d0/app/: di.py
t0d0d0d0/backend/: answer.py  app.py
t0d0d0d0/bot/: Dockerfile  __main__.py  bot.py  config.py  depends.py  ioc.py  requirements.txt  shortcuts.py
t0d0d0d0/core/: config.py  depends.py  exceptions.py  inversion.py  uow.py  utils.py
t0d0d0d0/coreback/: config.py  encryption.py  exceptions.py  inversion.py  lol.py  state.py  uow.py  utils.py
t0d0d0d0/frontend/: .env.development  .env.production  Dockerfile  index.html  package-lock.json  package.json  server.js  vite.config.js
t0d0d0d0/http/: Dockerfile  app.py  config.py  ioc.py  serializer.py  shortcuts.py  start.py
t0d0d0d0/jwt/: __init__.py  jwt.py
t0d0d0d0/litestar/: app.py  config.py  ioc.py  serializer.py  shortcuts.py
t0d0d0d0/notyfier/: Dockerfile  __main__.py  app.py  config.go  go.mod  go.sum  main.go  requirements.txt  (+2 more)
(+213 files in other folders)
