[project]
name = "t0d0d0d0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.4",
    "asyncio-redis>=0.16.0",
    "asyncpg>=0.30.0",
    "cryptography>=44.0.0",
    "dishka>=1.4.2",
    "faststream>=0.5.33",
    "litestar>=2.13.0",
    "msgspec>=0.19.0",
    "mypy>=1.14.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
